--- a/emscripten/Makefile
+++ b/emscripten/Makefile
@@ -4,24 +4,14 @@ BINDINGS_GENERATOR = $(EMSCRIPTEN)/tools/bindings_generator.py
 NATIVIZER = $(EMSCRIPTEN)/tools/nativize_llvm.py
 
 all: relooper.js
-#relooper.exe
 
-combined.bc: ../Relooper.h ../Relooper.cpp
-	$(BINDINGS_GENERATOR) bindings ../Relooper.h -- '{ "ignored": "Shape::IdCounter,LabeledShape,Block::IdCounter,Shape::Type" }' > /dev/null
-	$(EMCC) -include ../Relooper.h bindings.cpp -o bindings.bc
-	$(EMCC) ../Relooper.cpp -I.. -o relooper.bc
-	$(EMCC) bindings.bc relooper.bc -o combined.bc
-
-relooper.js: combined.bc
-	$(EMCC) -O2 combined.bc --post-js bindings.js -o relooper.raw.js
+relooper.js:
+	$(EMCC) -O2 --closure 0 ../Relooper.cpp -I.. --post-js glue.js -o relooper.raw.js -s TOTAL_MEMORY=52428800 -s DEFAULT_LIBRARY_FUNCS_TO_INCLUDE='["memcpy", "memset", "malloc", "free", "puts"]'
 	echo "var Relooper = (function() {" > relooper.js
 	cat relooper.raw.js >> relooper.js
-	echo "  return Module;" >> relooper.js
+	echo "  return Module.Relooper;" >> relooper.js
 	echo "})();" >> relooper.js
 
-#relooper.exe: combined.bc
-#	$(NATIVIZER) combined.bc
-
 clean:
-	rm relooper.js bindings.js bindings.cpp combined.bc relooper.bc bindings.bc bindings.all.h
+	rm relooper.js
 
