--- a/emscripten/Makefile
+++ b/emscripten/Makefile
@@ -7,7 +7,8 @@ all: relooper.js
 
 relooper.js:
 	$(EMCC) -O2 --closure 1 ../Relooper.cpp -I.. --post-js glue.js -o relooper.raw.js -s TOTAL_MEMORY=52428800 -s DEFAULT_LIBRARY_FUNCS_TO_INCLUDE='["memcpy", "memset", "malloc", "free", "puts"]'
-	echo "var Relooper = (function() {" > relooper.js
+	echo "// Relooper, (C) 2012 Alon Zakai, MIT license, https://github.com/kripken/Relooper" > relooper.js
+	echo "var Relooper = (function() {" >> relooper.js
 	cat relooper.raw.js >> relooper.js
 	echo "  return Module.Relooper;" >> relooper.js
 	echo "})();" >> relooper.js
